--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <head>
     <title>life is a bitch</title>
 </head>
-<body>
-    <h1>You will be fuckedcc</h1>
+<body style="background-color: orangered;">
+    <h1>You will be fucked</h1>
+
+    <p>
+        <h2>The definiton of fuckery</h2>
+    </p>
+    <h3>Expect to be fucked, you can't escape</h3>
+    <a href="www.facebook.com">facebook is dead</a>
+    <br><br>
+    <img src="download12.jpg" alt="image that says life is fucked">
+    <p style="color:red;">Red means you will be fucked.</p>
 </body>
 </html>
