--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-    <title>life is a bitch</title>
+    <title> life is a bitch.</title>
+
 </head>
-<body style="background-color: orangered;">
-    <h1>You will be fucked</h1>
+<body style="background-color: rgb(255, 68, 0);">
+    <h1 style="font-style: italic;">You will be fucked</h1>
 
     <p>
         <h2>The definiton of fuckery</h2>
@@ -12,6 +13,13 @@
     <a href="www.facebook.com">facebook is dead</a>
     <br><br>
     <img src="download12.jpg" alt="image that says life is fucked">
-    <p style="color:red;">Red means you will be fucked.</p>
+    <p style="color:green;">Red means you will be fucked.</p>
+
+    <input type="checkbox">
+    <iframe src="" frameborder="0"></iframe>
+    <input type="textarea">
+    <a href="http://C:\Users\HP\Desktop\lifeisabitch\form.html">lets get to know you</a>
+    
 </body>
+<form action="/actoin_page.php"></form>
 </html>
