--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <input type="checkbox">
     <iframe src="" frameborder="0"></iframe>
     <input type="textarea">
-    <a href="http://C:\Users\HP\Desktop\lifeisabitch\form.html">lets get to know you</a>
+    <a href="form.html">lets get to know you</a>
     
 </body>
-<form action="/actoin_page.php"></form>
 </html>
